# API.ColorAutocomplete

./: .gitignore  CHANGELOG.md  autocomplete-api.cabal
app/: Main.hs
assets/: colors.json  test.txt
libs/: Autocomplete.hs  JSONBuilder.hs  LoadFile.hs  Logger.hs  Router.hs
routes/: GetColor.hs
