cabal-version:      2.4
name:               autocomplete-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Walker
maintainer:         walkjo53@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    base ^>=4.12.0.0, containers, time, bytestring
    default-language: Haskell2010

library autocomplete
    import:           common-all
    exposed-modules:  Autocomplete, LoadFile
    hs-source-dirs:   libs

library loadFile
    import:           common-all
    exposed-modules:  LoadFile
    hs-source-dirs:   libs

library logger
    import:           common-all
    exposed-modules:  Logger
    hs-source-dirs:   libs
    build-depends:    wai

library json-builder
    import:           common-all
    exposed-modules:  JSONBuilder
    hs-source-dirs:   libs

executable autocomplete-api
    import:           common-all
    main-is:          Main.hs
    build-depends:    warp ^>=3.3.17, http-types, wai

    -- Modules included in this executable, other than Main.
    other-modules: Autocomplete, Logger, JSONBuilder

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app, libs
