cabal-version:      3.4
name:               autocomplete-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Walker
maintainer:         walkjo53@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:      base ^>=4.12.0.0,
                        containers,
                        time,
                        bytestring,
                        text,
    default-language:   Haskell2010

common common-libs
    import:             common-all
    hs-source-dirs:     libs

library logger
    import:             common-libs
    exposed-modules:    Logger
    build-depends:      wai

library router
    import:             common-libs
    exposed-modules:    Router
    build-depends:      warp ^>=3.3.17,
                        http-types,
                        wai ^>=3.2.3,
                        aeson ^>=1.5.6.0
    other-modules:      Autocomplete, Logger

common common-routes
    import:             common-all
    build-depends:      warp ^>=3.3.17,
                        http-types,
                        wai ^>=3.2.3,
                        aeson ^>=1.5.6.0
    other-modules:      Router,
                        Logger
    hs-source-dirs:     routes, libs

 library get-color
    import:             common-routes
    exposed-modules:    GetColor
    other-modules:      Autocomplete

executable autocomplete-api
    import:             common-all
    main-is:            Main.hs
    build-depends:      warp ^>=3.3.17,
                        http-types,
                        wai ^>=3.2.3,
                        aeson ^>=1.5.6.0

    -- Modules included in this executable, other than Main.
    other-modules:      GetColor,
                        Router,
                        Logger,
                        Autocomplete,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:     app,
                        app/routes,
                        libs,
                        routes,
                        /home/jonathan/modules/haskell/Autocomplete/lib
